--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!-- saved from url=(0024)#41 -->
-<html>
+<html lang="zh-cn">
 	<head>
 		<meta charset="utf-8">    
 		<meta name="keywords" content="ecmascript, ecmascript3.1, ecmascript5, es, es3, es5, javascript, javascript规范, 规范, yanhaijing, 颜海镜, web前端">  
 		<meta name="description" content="ECMAScript 是ECMAScript规范的中文版，和合集，另附有ecmascript3中英文版和其他es5英文版，javascript 高手的必读物和必备手册">  
-        <title>ECMAScript5.1中文版</title>
+        <title>ECMAScript5.1中文版 + ECMAScript3（合集）</title>
         <link href="./ECMAScript5.1中文版_files/basic.css" rel="styleSheet" type="text/css">
     <style type="text/css"></style>
 	<script src="baidu.js"></script>
