add share plugin
1.添加分享插件

--- a/index.html
+++ b/index.html
@@ -22839,6 +22839,11 @@
 				<a href="http://tools.ietf.org/html/rfc4627">RFC 4627</a> “The application/json Media Type for JavaScript Object Notation (JSON)“ , available at &lt;<a href="http://tools.ietf.org/html/rfc4627">http://tools.ietf.org/html/rfc4627</a>&gt;
 			</li>
 		</ol>
-
+		<!-- JiaThis Button BEGIN -->
+		<script type="text/javascript">
+		var jiathis_config = {data_track_clickback:'true'};
+		</script>
+		<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r2.gif&amp;uid=1394090280134564" charset="utf-8"></script>
+		<!-- JiaThis Button END -->	
 	</body>
 </html>
