--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="本规范 是ECMAScript规范 5.1版本的中文版，另附有ecmascript3中英文版和其他es5英文版，javascript 高手的必读物和必备手册">
 		<title>ECMAScript5.1中文版 + ECMAScript3（合集）</title>
 		<link href="css/basic.css" rel="styleSheet">
-		<!-- <script src="js/baidu.js"></script>-->
+		<script src="js/baidu.js"></script>
 		<!--[if lt IE 9]>
 		<script src="http://yanhaijing.com/assets/js/html5.js"></script>
 		<![endif]-->
@@ -23151,7 +23151,7 @@
 		<script type="text/javascript">
 			var jiathis_config = {data_track_clickback:'true'};
 		</script>
-		<!--<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r2.gif&amp;uid=1394090280134564" charset="utf-8"></script> -->
+		<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r2.gif&amp;uid=1394090280134564" charset="utf-8"></script>
 		<!-- JiaThis Button END -->
 	</body>
 </html>
