--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div id="info">
-			<a href="http://yanhaijing.com" target="_blank">我的博客</a><a target="_blank" href="http://weibo.com/yanhaijing1234">我的微博</a><a target="_blank" href="https://github.com/yanhaijing">我的github</a>
-		</div>
 		<a id="switch" class="switch">目录</a>
 		<nav id="nav" class="nav">			
 			<ol class="toc">
@@ -23147,11 +23144,18 @@
 
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/index.js"></script>
+
 		<!-- JiaThis Button BEGIN -->
 		<script type="text/javascript">
 			var jiathis_config = {data_track_clickback:'true'};
 		</script>
 		<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r2.gif&amp;uid=1394090280134564" charset="utf-8"></script>
 		<!-- JiaThis Button END -->
+
+		<!-- UJian Button BEGIN -->
+		<script type="text/javascript">var ujian_config = {defaultPic:'http://yanhaijing.com/img/facelessman.png'};</script>
+		<script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js?type=slide&fade=1&uid=1908435"></script>
+		<a href="http://www.ujian.cc" style="border:0;"><img src="http://img.ujian.cc/pixel.png" alt="ujian" style="border:0;padding:0;margin:0;" /></a>
+		<!-- UJian Button END -->
 	</body>
 </html>
