修改文案信息
为阅读而生

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="ecmascript, ecmascript3.1, ecmascript5, es, es3, es5, javascript, javascript规范, 规范, yanhaijing, 颜海镜, web前端">
-		<meta name="description" content="本规范 是ECMAScript规范 5.1版本的中文版，另附有ecmascript3中英文版和其他es5英文版，javascript 高手的必读物和必备手册">
+		<meta name="description" content="本规范 是ECMAScript规范 5.1版本的中文版，意在优化阅读体验，为阅读而生，另附有ecmascript3中英文版和其他es5英文版，javascript 高手的必读物和必备手册">
 		<title>ECMAScript5.1中文版 + ECMAScript3（合集）</title>
 		<link href="css/basic.css" rel="styleSheet">
 		<script src="js/baidu.js"></script>
@@ -2198,12 +2198,15 @@
 		<div class="content">
 			<h1 class="intro"><a id="about">关于</a></h1>
 			<p>
-				关于部分不是规范的一部分，而是我补充的，有一些话需要说在前面，本规范原出处为<a target="_blank" href="http://ecmascript.cn/">http://ecmascript.cn/</a>，最近这个网站打不开了，出于方便自己，方便大家的目的，特将规范整理于此，如有侵权请联系我。
+				关于部分不属于规范，本规范是w3c 规范的镜像版，目前以100%完成，但尚未校订，本规范为阅读而生，意在优化阅读体验。
 			</p>
 			<p>
-				本规范是ecmascript5的版本，下面是本人整理的一些其他es规范
+				本规范是ECMAScript5.1中文版，下面是本人整理的一些其他es规范
 			</p>
 			<ul>
+				<li>
+					<a target="_blank" href="https://www.w3.org/html/ig/zh/wiki/ES5">w3c 中文版</a>
+				</li>
 				<li>
 					<a target="_blank" href="Ecma-262.pdf">ecmascript 5.1 英文版 pdf</a>
 				</li>
@@ -2226,9 +2229,6 @@
 					<a href="http://es6.ruanyifeng.com/" target="_blank">ECMAScript 6 入门(阮一峰)</a>
 				</li>
 			</ul>
-			<p>
-				<strong>注：经考证本规范原出处 https://www.w3.org/html/ig/zh/wiki/ES5 ，版权属于 Ecma国际，目前以100%完成，但尚未校订，本规范是w3c规范的镜像版，建议查看w3c版本，时时更新中……</strong>
-			</p>
 			<h1 class="intro"><a id="0">介绍</a></h1>
 			<p id="block0">
 				这一Ecma标准建立在一些原本的技术上，最为著名的是JavaScript(网景)和JScript (微软)。语言由网景的Brendan Eich发明而第一次出现在这个公司的Navigator 2.0浏览器上。它出现在所有Netscape后来的浏览器以及微软从Internet Explorer 3.0之后的所有浏览器上。
