--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<a id="switch" class="switch">目录</a>
-		<nav id="nav" class="nav">			
+		<nav id="nav" class="nav">
 			<ol class="toc">
 				<li>
 					<a href="#about" class="about">关于</a>
@@ -23144,6 +23144,21 @@
 
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/index.js"></script>
+
+		<!-- Duoshuo Comment BEGIN -->
+		<div class="ds-thread"></div>
+		<script type="text/javascript">
+			var duoshuoQuery = {short_name:"yanhaijing"};
+			(function() {
+				var ds = document.createElement('script');
+				ds.type = 'text/javascript';ds.async = true;
+				ds.src = 'http://static.duoshuo.com/embed.js';
+				ds.charset = 'UTF-8';
+				(document.getElementsByTagName('head')[0]
+				|| document.getElementsByTagName('body')[0]).appendChild(ds);
+			})();
+		</script>
+		<!-- Duoshuo Comment END -->
 
 		<!-- JiaThis Button BEGIN -->
 		<script type="text/javascript">
