--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="ecmascript, ecmascript3.1, ecmascript5, es, es3, es5, javascript, javascript规范, 规范, yanhaijing, 颜海镜, web前端">
-		<meta name="description" content="本规范 是ECMAScript规范 5.1版本的中文版，意在优化阅读体验，为阅读而生，另附有ecmascript3中英文版和其他es5英文版，javascript 高手的必读物和必备手册">
-		<title>ECMAScript5.1中文版 + ECMAScript3（合集）</title>
+		<meta name="keywords" content="ecmascript, ecmascript3.1, ecmascript5, ecmascript6, es, es3, es5, es6, javascript, javascript规范, 规范, yanhaijing, 颜海镜, web前端">
+		<meta name="description" content="本规范是 ECMAScript 规范 5.1版本的中文版，意在优化阅读体验，为阅读而生，另附有ecmascript3中英文版和其他es5英文版，及 ES6，javascript 高手的必读物和必备手册">
+		<title>ECMAScript5.1中文版 + ECMAScript3 + ECMAScript（合集）</title>
 		<link href="css/basic.css" rel="styleSheet">
 		<script src="js/baidu.js"></script>
 		<!--[if lt IE 9]>
