优化大屏阅读体验 删除临时文件

--- a/index.html
+++ b/index.html
@@ -23144,6 +23144,7 @@
 		</div><!-- .wp -->
 
 		<script src="js/jquery-1.11.1.min.js"></script>
+		<script src="js/storage.js"></script>
 		<script src="js/index.js"></script>
 
 		<!-- Duoshuo Comment BEGIN -->
