--- a/index.html
+++ b/index.html
@@ -2207,25 +2207,31 @@
 				</p>
 				<ul>
 					<li>
-						<a target="_blank" href="https://www.w3.org/html/ig/zh/wiki/ES5">w3c 中文版</a>
-					</li>
-					<li>
-						<a target="_blank" href="Ecma-262.pdf">ecmascript 5.1 英文版 pdf</a>
-					</li>
-					<li>
-						<a target="_blank" href="ECMAScript规范-第三版_中文版.pdf">ECMAScript 3 中文版 pdf</a>
-					</li>
-					<li>
-						<a target="_blank" href="http://www.ecma-international.org/ecma-262/5.1/index.html">ecma-international ecma 262 5.1 英文</a>
-					</li>
-					<li>
-						<a target="_blank" href="http://people.mozilla.org/~jorendorff/es5.html">mozilla es5 英文</a>
-					</li>
-					<li>
 						<a href="http://www.ecmascript.org/" target="_blank">http://www.ecmascript.org/</a>
 					</li>
 					<li>
+						<a target="_blank" href="https://www.w3.org/html/ig/zh/wiki/ES5">w3c 中文版</a>
+					</li>
+					<li>
+						<a target="_blank" href="Ecma-262.pdf">ECMAScript 5.1 pdf（英）</a>
+					</li>
+					<li>
+						<a target="_blank" href="http://www.ecma-international.org/ecma-262/5.1/index.html">ecma-international ecma 262 5.1（英）</a>
+					</li>
+					<li>
+						<a target="_blank" href="https://people.mozilla.org/~jorendorff/es5.1-final.html">Mozilla es5.1（英）</a>
+					</li>
+					<li>
+						<a target="_blank" href="ECMAScript规范-第三版_中文版.pdf">ECMAScript 3 中文版 pdf</a>
+					</li>					
+					<li>
 						<a href="http://es6.ruanyifeng.com/" target="_blank">ECMAScript 6 入门(阮一峰)</a>
+					</li>
+					<li>
+						<a href="https://people.mozilla.org/~jorendorff/es6-draft.html" target="_blank">Mozilla es6 草案（英）</a>
+					</li>
+					<li>
+						<a href="http://wiki.ecmascript.org/doku.php?id=harmony:specification_drafts" target="_blank">ECMAScript harmony 标准草案（英）</a>
 					</li>
 				</ul>
 				<h1 class="intro"><a id="0">介绍</a></h1>
