添加离线缓存功能 :dog:

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0024)#41 -->
-<html lang="zh-cn">
+<html lang="zh-cn" manifest="index.manifest">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
