--- a/index.html
+++ b/index.html
@@ -2230,10 +2230,7 @@
 						<a href="http://es6.ruanyifeng.com/" target="_blank">ECMAScript 6 入门(阮一峰)</a>
 					</li>
 					<li>
-						<a href="https://people.mozilla.org/~jorendorff/es6-draft.html" target="_blank">Mozilla es6 草案（英）</a>
-					</li>
-					<li>
-						<a href="http://wiki.ecmascript.org/doku.php?id=harmony:specification_drafts" target="_blank">ECMAScript harmony 标准草案（英）</a>
+						<a href="http://www.ecma-international.org/ecma-262/6.0/" target="_blank">ECMAScript® 2015 Language Specification（ES6英）</a>
 					</li>
 				</ul>
 				
