feat: add es2016

--- a/index.html
+++ b/index.html
@@ -2232,6 +2232,9 @@
 					<li>
 						<a href="http://www.ecma-international.org/ecma-262/6.0/" target="_blank">ECMAScript® 2015 Language Specification（ES6英）</a>
 					</li>
+					<li>
+						<a href="http://www.ecma-international.org/ecma-262/7.0/index.html" target="_blank">ECMAScript® 2016 Language Specification（ES7英）</a>
+					</li>
 				</ul>
 				
 				<h1 class="book"><a id="book">推荐阅读</a></h1>
