--- a/index.html
+++ b/index.html
@@ -2235,6 +2235,9 @@
 					<li>
 						<a href="http://www.ecma-international.org/ecma-262/7.0/index.html" target="_blank">ECMAScript® 2016 Language Specification（ES7英）</a>
 					</li>
+					<li>
+						<a href="http://www.ecma-international.org/ecma-262/8.0/index.html" target="_blank">ECMAScript® 2017 Language Specification（ES8英）</a>
+					</li>
 				</ul>
 				
 				<h1 class="book"><a id="book">推荐阅读</a></h1>
