feat: 替换百度统计

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<meta name="description" content="本规范是 ECMAScript 规范 5.1版本的中文版，意在优化阅读体验，为阅读而生，另附有ecmascript3中英文版和其他es5英文版，及 ES6，javascript 高手的必读物和必备手册">
 		<title>ECMAScript5.1中文版 + ECMAScript3 + ECMAScript（合集）</title>
 		<link href="css/basic.css" rel="styleSheet">
-		<script src="js/baidu.js"></script>
+		<script src="//yanhaijing.com/assets/plugin/tongji/baidu.js"></script>
 		<!--[if lt IE 9]>
-		<script src="http://yanhaijing.com/assets/js/html5.js"></script>
+		<script src="//yanhaijing.com/assets/js/html5.js"></script>
 		<![endif]-->
 	</head>
 	<body>
