--- a/index.html
+++ b/index.html
@@ -20401,7 +20401,7 @@
 					Error.prototype.constructor初始值为内置的Error构造器。
 				</p><h4 class="chapter"><a id="586">Error.prototype.name</a></h4>
 				<p id="block2154">
-					rror.prototype.name初始值为"Error"。
+					Error.prototype.name初始值为"Error"。
 				</p><h4 class="chapter"><a id="587">Error.prototype.message</a></h4>
 				<p id="block2155">
 					Error.prototype.message初始值为空字符串。
