修改翻译错误
是LeftHandSideExpression 而不是LeftH 和 SideExpression

--- a/index.html
+++ b/index.html
@@ -9441,7 +9441,7 @@
 				</p>
 				<ol id="block863">
 					<li>
-						令 lref 为解释执行 LeftH 和 SideExpression 的结果 .
+						令 lref 为解释执行 LeftHandSideExpression 的结果 .
 					</li>
 					<li>
 						令 lval 为 GetValue(lref).
